# LyLibrary

./: .directory  CHANGELOG  CMakeLists.txt  INSTALL  LyLibrary.kdev4  README  README.md  README.txt  build_mingw32  build_mingw64  cmake_install.cmake  install_manifest.txt  lylibrary.kdev4  removefile.ps1  removefile.sh  source.pro
analogclock/: CMakeLists.txt  analogclock.cpp  analogclock.h  analogclock.pro  cmake_install.cmake  images.qrc
analogclock/images/: .directory
backup_restore_db/: CMakeLists.txt  backup_restore_db.pro  cmake_install.cmake  db_bk_rs.cpp  db_bk_rs.h  db_bk_rs.ui  dbbkrs_plugin.cpp  dbbkrs_plugin.h  dbbkrs_plugin.json
check_database/: CMakeLists.txt  check_database.cpp  check_database.h  check_database.pro  check_database.ui  checkdatabase_plugin.cpp  checkdatabase_plugin.h  checkdatabase_plugin.json  cmake_install.cmake  main.cpp
cmake/modules/: DetectMachine.cmake  FindPyQt4.cmake  FindPyQt5.cmake  FindQWT.cmake  FindQWTQT5.cmake  Win32Toolchain.cmake
debian/: changelog  control  copyright  dirs  docs  files  lylibrary.install  rules
debian/.debhelper/lylibrary/: dbgsym-build-ids
debian/.debhelper/lylibrary/dbgsym-root/DEBIAN/: control  md5sums
debian/.debhelper/lylibrary/dbgsym-root/usr/share/doc/: lylibrary-dbgsym
initdb/: CMakeLists.txt  cmake_install.cmake  connessione.cpp  connessione.h  connessione.ui  images.qrc  initdb.pro  sqlite_dump_postgres.py  update_db.cpp  update_db.h  update_db.ui
initdb/images/: .directory
initdb/installdb/: install_db.sql
initdb/qss/: style.qss
inventario/: CMakeLists.txt  StampaBiblioteca.cpp  StampaBiblioteca.h  cmake_install.cmake  export_inv.cpp  export_inv.h  inventario.cpp  inventario.h  inventario.pro  inventario.ui  inventario_plugin.cpp  inventario_plugin.h  inventario_plugin.json
log_man/: CMakeLists.txt  cmake_install.cmake  license.cpp  license.h  license.qrc  license.ui  log_man.pro  settingsmanager.cpp  settingsmanager.h
log_man/images/: .directory
lylibrary/: .directory  CMakeLists.txt  Process.cpp  about.cpp  about.h  alunni.sql  articoli.cpp  articoli.h  azienda.cpp  azienda.h  banche.cpp  banche.h  barcode.cpp  barcode.h  biblio.qrc  carico_mag.cpp  carico_mag.h  categoria.cpp  categoria.h  causali.cpp  causali.h  classe.cpp  classe.h  cmake_install.cmake  cod_fisc.cpp  cod_fisc.h  cod_fisc_est.cpp  cod_fisc_est.h  comuni.txt  comuni_cap.txt  conn_db.cpp  conn_db.h  da_fare.txt  details_plugin.cpp  details_plugin.h  ean13.cpp  ean13.h  esci.cpp  esci.h  estero.txt  (+84 more)
lylibrary/.fabaria_gest/: config.ini
lylibrary/data/: libanalogclock.lux  libinitdb-1.0.lux  liblog_man-1.0.lux
lylibrary/desktop/: lylibrary.desktop
lylibrary/images/: .directory  logo4.icns  sito.html
lylibrary/installdb/: install_db.sql
lylibrary/language/: English.qm  English.ts  Italian.ts  biblio_en.qm  biblio_en.ts  biblio_it.ts
lylibrary/language/backup/: English.qm  English.ts  Italian.ts
lylibrary/language/checkdb/: English.qm  English.ts  Italian.ts
lylibrary/language/initdb/: English.qm  English.ts  Italian.ts
lylibrary/language/inventario/: English.qm  English.ts  Italian.ts
lylibrary/language/license/: English.qm  English.ts  Italian.ts
lylibrary/language/lylibrary/: English.qm  English.ts  Italian.ts
lylibrary/messages/: LyLibraryMessageBox.cpp  LyLibraryMessageBox.h  LyLibraryMessageBox.ui
lylibrary/plugin/: libbackup_restore_db.lux  libcheck_database.lux  libinventario.lux
lylibrary/qss/: elegante.qss  modern.qss  nero.qss  style.qss
lylibrary/stampa/: StampaBiblioteca.cpp  StampaBiblioteca.h  StampaPrestiti.cpp  StampaPrestiti.h  StampaScadenze.cpp  StampaScadenze.h  StampaUtenti.cpp  StampaUtenti.h
lylibrary/ui/: about.ui  articoli.ui  azienda.ui  banche.ui  barcode.ui  carico_mag.ui  categoria.ui  causali.ui  cod_fisc.ui  details_plugin.ui  esci.ui  fatt_acq.ui  fatt_acq_art.ui  fatt_new.ui  fattura.ui  fattura_rg.ui  fattura_rg_art.ui  find_cap_italian.ui  fornitori.ui  iva.ui  mainwindow.ui  pag.ui  pluginmanager.ui  pref.ui  prest_lib.ui  prestito_app_dig.ui  prestito_dig.ui  presto.ui  prodotti_dvd.ui  scarico_mag.ui  upgrade.ui  user.ui  verify_codicefiscale.ui  verify_piva.ui
lylibrary/updatedb/: update_db.sql
poppler_pdf/: open_pdf.cpp  open_pdf.h  poppler.qrc  poppler_pdf.pro  read_pdf.cpp  read_pdf.h  read_pdf.ui
update/: CMakeLists.txt  Process.h  cmake_install.cmake  main.cpp  settingsmanager.cpp  settingsmanager.h  update.cpp  update.h  update.manifest  update.pro  update.qrc  update.ui  winicon.rc
update/images/: upgrade.icns
update/language/: English.qm  English.ts  Italian.ts
utility/: .directory  CMakeLists.txt  cmake_install.cmake  db_bk_rs.cpp  db_bk_rs.h  db_bk_rs.ui  images.qrc  main.cpp  winicon.rc
utility/images/: .directory  backup_restor.icns
xlsx/: .directory  CMakeLists.txt  cmake_install.cmake  xlsxdocument.h
